--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.0",
+    "apollo-link-context": "^1.0.20",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "next": "9.5.3",
     "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "sweetalert2": "^10.9.0",
     "tailwindcss": "^1.8.10",
     "yup": "^0.29.3"
   }
