--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-select": "^4.0.2",
     "sweetalert2": "^10.9.0",
     "tailwindcss": "^1.8.10",
     "yup": "^0.29.3"
