--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-select": "^4.0.2",
+    "recharts": "^2.0.6",
     "sweetalert2": "^10.9.0",
     "tailwindcss": "^1.8.10",
     "yup": "^0.29.3"
