--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.0",
     "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
     "formik": "^2.1.5",
     "graphql": "^15.3.0",
     "next": "9.5.3",
